--- a/src/main/webapp/views/cervejas/importarCervejas.html
+++ b/src/main/webapp/views/cervejas/importarCervejas.html
@@ -12,13 +12,14 @@
 <br>
 <div class="panel panel-default" ng-repeat="c in cervejas">
   <div class="panel-heading">
-	 <h3 class="panel-title"><img src="{{c.labels.icon}}" alt="{{c.name}}" class="img-thumbnail"> {{c.name}}
+	 <h3 class="panel-title"><img src="{{c.img}}"  class="img-thumbnail imgPequena"> {{c.name}}
      <button type="button" class="btn btn-primary" style="
-    float: right;" ng-click="importar(c)">Importar</button>
+    float: right;" ng-show="c.id==null" ng-click="importar(c)">Importar</button>
    </h3>
   </div>
   <div class="panel-body">
-    {{c.description}}
+   <b>Cervejaria:</b> {{c.cervejaria}} <br>
+   <b>Style:</b> {{c.style}}
   </div>
 </div>
 
