--- a/src/main/webapp/views/cervejas/listaCervejas.html
+++ b/src/main/webapp/views/cervejas/listaCervejas.html
@@ -10,17 +10,20 @@
       </span>
  </div>
 <br>
+<span>teste=  {{t.name}}</span> 
+
+<span>t</span> 
 <div class="panel panel-default" ng-repeat="c in cervejas">
   <div class="panel-heading">
-	 <h3 class="panel-title"><img src="{{c.labels.icon}}" alt="{{c.name}}" class="img-thumbnail"> {{c.name}}
+	 <h3 class="panel-title"><img src="{{c.img}}" alt="{{c.name}}" class="img-thumbnail"> {{c.name}}
      <button type="button" class="btn btn-primary" style="
     float: right;" ng-click="importar(c)">Importar</button>
    </h3>
   </div>
   <div class="panel-body">
-    {{c.description}}
+    {{c.cervejaria}}
   </div>
 </div>
-
+	
 	</section>
 </div>
