--- a/src/main/webapp/views/cervejas/Cervejas.html
+++ b/src/main/webapp/views/cervejas/Cervejas.html
@@ -63,7 +63,7 @@
 
   <div class="checkbox">
     <label>
-      <input type="checkbox" ng-true-value="'revisado'" ng-model="cerveja.status"> revisado
+      <input type="checkbox" ng-true-value="'VERIFICADO'" ng-model="cerveja.status"> revisado
     </label>
   </div>
   <button type="submit" ng-click="salvar()" class="btn btn-default">Salvar</button>
