--- a/src/main/webapp/views/cervejas/listaCervejas.html
+++ b/src/main/webapp/views/cervejas/listaCervejas.html
@@ -1,29 +1,22 @@
 
-<div class="container" style="margin-top:65px">
-	<section >
+<div class="container" style="margin-top: 65px">
+	<section>
 		<h1>Pesquisa</h1>
 		<br>
- <div class="input-group">
-      <input type="text" class="form-control" ng-model="query" placeholder="pesquisar cerveja ...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" ng-click="pesquisar()" type="button">pesquisar!</button>
-      </span>
- </div>
-<br>
-<span>teste=  {{t.name}}</span> 
+		
+		<table ng-table="tabela"
+			class="table table-bordered table-striped table-condensed">
+			<tr ng-repeat="row in $data track by row.id">
+				<td data-title="'Nome'" filter="{filterName: 'text'}"
+					ng-click="click(row)">{{row.name}}</td>
+				<td data-title="'Cervejaria'" filter="{filterCervejaria: 'text'}"
+					 ng-click="click(row)">{{row.cervejaria.name}}</td>
+				<td data-title="'Estilo'" filter="{filterEstilo: 'text'}"
+					ng-click="click(row)">{{row.style.name}}</td>
+				<td data-title="'Status'" filter="{filterStatus: 'text'}"
+					ng-click="click(row)">{{row.status}}</td>
+			</tr>
+		</table>
 
-<span>t</span> 
-<div class="panel panel-default" ng-repeat="c in cervejas">
-  <div class="panel-heading">
-	 <h3 class="panel-title"><img src="{{c.img}}" alt="{{c.name}}" class="img-thumbnail"> {{c.name}}
-     <button type="button" class="btn btn-primary" style="
-    float: right;" ng-click="importar(c)">Importar</button>
-   </h3>
-  </div>
-  <div class="panel-body">
-    {{c.cervejaria}}
-  </div>
-</div>
-	
 	</section>
 </div>
